finished first draught of chapters 1 (continuum) and 2 (lattice qcd)

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,4 +1,689 @@
 
+@inproceedings{Koponen:2013ila,
+      author         = "Koponen, Jonna",
+            title          = "{Lattice results for $D/D_s$ leptonic and semileptonic
+                        decays}",
+			      booktitle      = "{Proceedings, 6th International Workshop on Charm Physics
+                        (Charm 2013): Manchester, UK, August 31-September 4,
+                        2013}",
+			      url            = "http://www.slac.stanford.edu/econf/C130831/papers/1311.6931.pdf",
+			            year           = "2013",
+				          eprint         = "1311.6931",
+					        archivePrefix  = "arXiv",
+						      primaryClass   = "hep-lat",
+						            SLACcitation   = "%%CITATION = ARXIV:1311.6931;%%"
+							    }
+
+
+@article{Na:2012uh,
+      author         = "Na, Heechang and Monahan, Chris and Davies, Christine and
+                        Follana, Eduardo and Horgan, Ron and Lepage, Peter and
+                        Shigemitsu, Junko",
+			      title          = "{Precise Determinations of the Decay Constants of B and D
+                        mesons}",
+			      booktitle      = "{Proceedings, 30th International Symposium on Lattice
+                        Field Theory (Lattice 2012): Cairns, Australia, June
+                        24-29, 2012}",
+			      journal        = "PoS",
+			            volume         = "LATTICE2012",
+				          year           = "2012",
+					        pages          = "102",
+						      doi            = "10.22323/1.164.0102",
+						            eprint         = "1212.0586",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1212.0586;%%"
+									      }
+
+@article{Koponen:2011ev,
+      author         = "Koponen, Jonna and Davies, Christine T. H. and Donald,
+                        Gordon and Follana, Eduardo and Lepage, G. Peter and Na,
+                        Heechang and Shigemitsu, Junko",
+			      title          = "{The D to K and D to pi semileptonic decay form factors
+                        from Lattice QCD}",
+			      booktitle      = "{Proceedings, 29th International Symposium on Lattice
+                        field theory (Lattice 2011): Squaw Valley, Lake Tahoe,
+                        USA, July 10-16, 2011}",
+			      collaboration  = "HPQCD",
+			            journal        = "PoS",
+				          volume         = "LATTICE2011",
+					        year           = "2011",
+						      pages          = "286",
+						            doi            = "10.22323/1.139.0286",
+							          eprint         = "1111.0225",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            SLACcitation   = "%%CITATION = ARXIV:1111.0225;%%"
+										    }
+
+
+@article{Na:2011mc,
+      author         = "Na, Heechang and Davies, Christine T. H. and Follana,
+                        Eduardo and Koponen, Jonna and Lepage, G. Peter and
+                        Shigemitsu, Junko",
+			      title          = "{$D \rightarrow \pi, l \nu$ Semileptonic Decays,
+                        $|V_{cd}|$ and 2$^{nd}$ Row Unitarity from Lattice QCD}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D84",
+				          year           = "2011",
+					        pages          = "114505",
+						      doi            = "10.1103/PhysRevD.84.114505",
+						            eprint         = "1109.1501",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1109.1501;%%"
+									      }
+
+@article{Davies:2008nq,
+      author         = "Davies, C. T. H. and others",
+            title          = "{Precision charm physics, m(c) and alpha(s) from lattice
+                        QCD}",
+			      booktitle      = "{Proceedings, 26th International Symposium on Lattice
+                        field theory (Lattice 2008): Williamsburg, USA, July
+                        14-19, 2008}",
+			      collaboration  = "HPQCD",
+			            journal        = "PoS",
+				          volume         = "LATTICE2008",
+					        year           = "2008",
+						      pages          = "118",
+						            doi            = "10.22323/1.066.0118",
+							          eprint         = "0810.3548",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            SLACcitation   = "%%CITATION = ARXIV:0810.3548;%%"
+										    }
+
+@inproceedings{Davies:2008hs,
+      author         = "Davies, C. T. H.",
+            title          = "{Precision charmonium and D physics from lattice QCD and
+                        determination of the charm quark mass}",
+			      booktitle      = "{Proceedings, 34th International Conference on High
+                        Energy Physics (ICHEP 2008): Philadelphia, Pennsylvania,
+                        July 30-August 5, 2008}",
+			      collaboration  = "HPQCD",
+			            year           = "2008",
+				          eprint         = "0810.3309",
+					        archivePrefix  = "arXiv",
+						      primaryClass   = "hep-lat",
+						            SLACcitation   = "%%CITATION = ARXIV:0810.3309;%%"
+							    }
+
+@article{Na:2012iu,
+      author         = "Na, Heechang and Davies, Christine T. H. and Follana,
+                        Eduardo and Lepage, G. Peter and Shigemitsu, Junko",
+			      title          = "{$|V_{cd}|$ from D Meson Leptonic Decays}",
+			            journal        = "Phys. Rev.",
+				          volume         = "D86",
+					        year           = "2012",
+						      pages          = "054510",
+						            doi            = "10.1103/PhysRevD.86.054510",
+							          eprint         = "1206.4936",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            SLACcitation   = "%%CITATION = ARXIV:1206.4936;%%"
+										    }
+
+@article{Wilson:1974sk,
+      author         = "Wilson, Kenneth G.",
+            title          = "{Confinement of Quarks}",
+	          journal        = "Phys. Rev.",
+		        volume         = "D10",
+			      year           = "1974",
+			            pages          = "2445-2459",
+				          doi            = "10.1103/PhysRevD.10.2445",
+					        note           = "[,319(1974)]",
+						      reportNumber   = "CLNS-262",
+						            SLACcitation   = "%%CITATION = PHRVA,D10,2445;%%"
+							    }
+
+
+
+@article{Kogut:1974ag,
+      author         = "Kogut, John B. and Susskind, Leonard",
+            title          = "{Hamiltonian Formulation of Wilson's Lattice Gauge
+                        Theories}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D11",
+				          year           = "1975",
+					        pages          = "395-408",
+						      doi            = "10.1103/PhysRevD.11.395",
+						            reportNumber   = "Print-74-1186 (CORNELL)",
+							          SLACcitation   = "%%CITATION = PHRVA,D11,395;%%"
+								  }
+
+
+
+@article{deForcrand:2010ys,
+      author         = "de Forcrand, Philippe",
+            title          = "{Simulating QCD at finite density}",
+	          booktitle      = "{Proceedings, 27th International Symposium on Lattice
+                        field theory (Lattice 2009): Beijing, P.R. China, July
+                        26-31, 2009}",
+			      journal        = "PoS",
+			            volume         = "LAT2009",
+				          year           = "2009",
+					        pages          = "010",
+						      doi            = "10.22323/1.091.0010",
+						            eprint         = "1005.0539",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      reportNumber   = "CERN-PH-TH-2010-090",
+									            SLACcitation   = "%%CITATION = ARXIV:1005.0539;%%"
+										    }
+										    
+
+@article{Abe:2003sx,
+      author         = "Abe, Kazuo and others",
+            title          = "{An Upper bound on the decay tau ---> mu gamma from
+                        Belle}",
+			      collaboration  = "Belle",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "92",
+					        year           = "2004",
+						      pages          = "171802",
+						            doi            = "10.1103/PhysRevLett.92.171802",
+							          eprint         = "hep-ex/0310029",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ex",
+									            SLACcitation   = "%%CITATION = HEP-EX/0310029;%%"
+										    }
+
+@article{TheMEG:2016wtm,
+      author         = "Baldini, A. M. and others",
+            title          = "{Search for the lepton flavour violating decay $\mu ^+
+                        \rightarrow \mathrm {e}^+ \gamma $ with the full dataset
+                        of the MEG experiment}",
+			      collaboration  = "MEG",
+			            journal        = "Eur. Phys. J.",
+				          volume         = "C76",
+					        year           = "2016",
+						      number         = "8",
+						            pages          = "434",
+							          doi            = "10.1140/epjc/s10052-016-4271-x",
+								        eprint         = "1605.05081",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ex",
+										          SLACcitation   = "%%CITATION = ARXIV:1605.05081;%%"
+											  }
+											  
+
+@article{Freytsis:2015qca,
+      author         = "Freytsis, Marat and Ligeti, Zoltan and Ruderman, Joshua
+                        T.",
+			      title          = "{Flavor models for $\bar{B} \to D^{(*)} \tau \bar{\nu}$}",
+			            journal        = "Phys. Rev.",
+				          volume         = "D92",
+					        year           = "2015",
+						      number         = "5",
+						            pages          = "054018",
+							          doi            = "10.1103/PhysRevD.92.054018",
+								        eprint         = "1506.08896",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ph",
+										          SLACcitation   = "%%CITATION = ARXIV:1506.08896;%%"
+											  }
+
+
+
+@article{Crivellin:2015mga,
+      author         = "Crivellin, Andreas and D'Ambrosio, Giancarlo and Heeck,
+                        Julian",
+			      title          = "{Explaining $h\to\mu^\pm\tau^\mp$, $B\to K^* \mu^+\mu^-$
+                        and $B\to K \mu^+\mu^-/B\to K e^+e^-$ in a
+                        two-Higgs-doublet model with gauged $L_\mu-L_\tau$}",
+			      journal        = "Phys. Rev. Lett.",
+			            volume         = "114",
+				          year           = "2015",
+					        pages          = "151801",
+						      doi            = "10.1103/PhysRevLett.114.151801",
+						            eprint         = "1501.00993",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "CERN-PH-TH-2015-001, ULB-TH-14-26",
+									            SLACcitation   = "%%CITATION = ARXIV:1501.00993;%%"
+										    }
+
+@article{Bauer:2015knc,
+      author         = "Bauer, Martin and Neubert, Matthias",
+            title          = "{Minimal Leptoquark Explanation for the R$_{D^{(*)}}$ ,
+                        R$_K$ , and $(g-2)_g$ Anomalies}",
+			      journal        = "Phys. Rev. Lett.",
+			            volume         = "116",
+				          year           = "2016",
+					        number         = "14",
+						      pages          = "141802",
+						            doi            = "10.1103/PhysRevLett.116.141802",
+							          eprint         = "1511.01900",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            reportNumber   = "MITP-15-100",
+										          SLACcitation   = "%%CITATION = ARXIV:1511.01900;%%"
+											  }
+										    
+
+@article{Altmannshofer:2017yso,
+      author         = "Altmannshofer, Wolfgang and Stangl, Peter and Straub,
+                        David M.",
+			      title          = "{Interpreting Hints for Lepton Flavor Universality
+                        Violation}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D96",
+				          year           = "2017",
+					        number         = "5",
+						      pages          = "055008",
+						            doi            = "10.1103/PhysRevD.96.055008",
+							          eprint         = "1704.05435",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            SLACcitation   = "%%CITATION = ARXIV:1704.05435;%%"
+										    }
+										    
+
+@article{HFLAV16,
+      author         = "Amhis, Y. and others",
+            collaboration  = "Heavy Flavor Averaging Group",
+	          title          = "{Averages of $b$-hadron, $c$-hadron, and $\tau$-lepton
+                        properties as of summer 2016}",
+			      journal        = "Eur. Phys. J.",
+			            volume         = "C77",
+				          pages          = "895",
+					        doi            = "10.1140/epjc/s10052-017-5058-4",
+						      year           = "2017",
+						            eprint         = "1612.07233",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ex",
+									      SLACcitation   = "%%CITATION = ARXIV:1612.07233;%%",
+									            note           = "{updated results and plots available at {https://hflav.web.cern.ch}{{\texttt{https://hflav.web.cern.ch}}}}",
+										    }
+
+@article{Bordone:2016gaq,
+      author         = "Bordone, Marzia and Isidori, Gino and Pattori, Andrea",
+            title          = "{On the Standard Model predictions for $R_K$ and
+                        $R_{K^*}$}",
+			      journal        = "Eur. Phys. J.",
+			            volume         = "C76",
+				          year           = "2016",
+					        number         = "8",
+						      pages          = "440",
+						            doi            = "10.1140/epjc/s10052-016-4274-7",
+							          eprint         = "1605.07633",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            SLACcitation   = "%%CITATION = ARXIV:1605.07633;%%"
+										    }
+
+
+@article{Descotes-Genon:2015uva,
+      author         = "Descotes-Genon, Sébastien and Hofer, Lars and Matias,
+                        Joaquim and Virto, Javier",
+			      title          = "{Global analysis of $b\to s\ell\ell$ anomalies}",
+			            journal        = "JHEP",
+				          volume         = "06",
+					        year           = "2016",
+						      pages          = "092",
+						            doi            = "10.1007/JHEP06(2016)092",
+							          eprint         = "1510.04239",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            reportNumber   = "LPT-ORSAY-15-68, QFET-2015-29, SI-HEP-2015-19",
+										          SLACcitation   = "%%CITATION = ARXIV:1510.04239;%%"
+											  }
+
+@article{Capdevila:2016ivx,
+      author         = "Capdevila, Bernat and Descotes-Genon, Sebastien and
+                        Matias, Joaquim and Virto, Javier",
+			      title          = "{Assessing lepton-flavour non-universality from $B\to
+                        K^*\ell\ell$ angular analyses}",
+			      journal        = "JHEP",
+			            volume         = "10",
+				          year           = "2016",
+					        pages          = "075",
+						      doi            = "10.1007/JHEP10(2016)075",
+						            eprint         = "1605.03156",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "LPT-ORSAY-16-40, QFET-2016-09, SI-HEP-2016-14",
+									            SLACcitation   = "%%CITATION = ARXIV:1605.03156;%%"
+										    }
+
+
+@article{Capdevila:2017ert,
+      author         = "Capdevila, Bernat and Descotes-Genon, Sebastien and
+                        Hofer, Lars and Matias, Joaquim",
+			      title          = "{Hadronic uncertainties in $B \to K^* \mu^+ \mu^-$: a
+                        state-of-the-art analysis}",
+			      journal        = "JHEP",
+			            volume         = "04",
+				          year           = "2017",
+					        pages          = "016",
+						      doi            = "10.1007/JHEP04(2017)016",
+						            eprint         = "1701.08672",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "ICCUB-17-003, UAB-FT-990, LPT-ORSAY-16-89",
+									            SLACcitation   = "%%CITATION = ARXIV:1701.08672;%%"
+										    }
+
+
+@article{Serra:2016ivr,
+      author         = "Serra, Nicola and Silva Coutinho, Rafael and van Dyk,
+                        Danny",
+			      title          = "{Measuring the breaking of lepton flavor universality in
+                        $B\to K^*\ell^+\ell^-$}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D95",
+				          year           = "2017",
+					        number         = "3",
+						      pages          = "035029",
+						            doi            = "10.1103/PhysRevD.95.035029",
+							          eprint         = "1610.08761",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            reportNumber   = "EOS-2016-03, ZU-TH-12-16",
+										          SLACcitation   = "%%CITATION = ARXIV:1610.08761;%%"
+											  }
+
+@article{Straub:2015ica,
+      author         = "Bharucha, Aoife and Straub, David M. and Zwicky, Roman",
+            title          = "{$B\to V\ell^+\ell^-$ in the Standard Model from
+                        light-cone sum rules}",
+			      journal        = "JHEP",
+			            volume         = "08",
+				          year           = "2016",
+					        pages          = "098",
+						      doi            = "10.1007/JHEP08(2016)098",
+						            eprint         = "1503.05534",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "TUM-HEP-957-14, CP3-Origins-2015-010, DIAS-2015-10",
+									            SLACcitation   = "%%CITATION = ARXIV:1503.05534;%%"
+										    }
+
+@article{Altmannshofer:2017fio,
+      author         = "Altmannshofer, Wolfgang and Niehoff, Christoph and
+                        Stangl, Peter and Straub, David M.",
+			      title          = "{Status of the $B\rightarrow K^*\mu ^+\mu ^-$ anomaly
+                        after Moriond 2017}",
+			      journal        = "Eur. Phys. J.",
+			            volume         = "C77",
+				          year           = "2017",
+					        number         = "6",
+						      pages          = "377",
+						            doi            = "10.1140/epjc/s10052-017-4952-0",
+							          eprint         = "1703.09189",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            SLACcitation   = "%%CITATION = ARXIV:1703.09189;%%"
+										    }
+
+
+@article{Jager:2014rwa,
+      author         = "Jäger, Sebastian and Martin Camalich, Jorge",
+            title          = "{Reassessing the discovery potential of the $B \to K^{*}
+                        \ell^+\ell^-$ decays in the large-recoil region: SM
+                        challenges and BSM opportunities}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D93",
+				          year           = "2016",
+					        number         = "1",
+						      pages          = "014028",
+						            doi            = "10.1103/PhysRevD.93.014028",
+							          eprint         = "1412.3183",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            SLACcitation   = "%%CITATION = ARXIV:1412.3183;%%"
+										    }
+
+@article{Aaij:2017vbb,
+      author         = "Aaij, R. and others",
+            title          = "{Test of lepton universality with $B^{0} \rightarrow
+                        K^{*0}\ell^{+}\ell^{-}$ decays}",
+			      collaboration  = "LHCb",
+			            journal        = "JHEP",
+				          volume         = "08",
+					        year           = "2017",
+						      pages          = "055",
+						            doi            = "10.1007/JHEP08(2017)055",
+							          eprint         = "1705.05802",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ex",
+									            reportNumber   = "LHCB-PAPER-2017-013, CERN-EP-2017-100",
+										          SLACcitation   = "%%CITATION = ARXIV:1705.05802;%%"
+											  }
+
+@article{Bailey:2018feb,
+      author         = "Bailey, Jon A. and Lee, Sunkyu and Lee, Weonjong and
+                        Leem, Jaehoon and Park, Sungwoo",
+			      title          = "{Updated evaluation of $\epsilon_K$ in the standard model
+                        with lattice QCD inputs}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D98",
+				          year           = "2018",
+					        number         = "9",
+						      pages          = "094505",
+						            doi            = "10.1103/PhysRevD.98.094505",
+							          eprint         = "1808.09657",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            SLACcitation   = "%%CITATION = ARXIV:1808.09657;%%"
+										    }
+
+
+@article{Aaij:2014ora,
+      author         = "Aaij, Roel and others",
+            title          = "{Test of lepton universality using $B^{+}\rightarrow
+                        K^{+}\ell^{+}\ell^{-}$ decays}",
+			      collaboration  = "LHCb",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "113",
+					        year           = "2014",
+						      pages          = "151601",
+						            doi            = "10.1103/PhysRevLett.113.151601",
+							          eprint         = "1406.6482",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ex",
+									            reportNumber   = "CERN-PH-EP-2014-140, LHCB-PAPER-2014-024",
+										          SLACcitation   = "%%CITATION = ARXIV:1406.6482;%%"
+											  }
+											  
+
+@article{Lees:2012xj,
+      author         = "Lees, J. P. and others",
+            title          = "{Evidence for an excess of $\bar{B} \to D^{(*)}
+                        \tau^-\bar{\nu}_\tau$ decays}",
+			      collaboration  = "BaBar",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "109",
+					        year           = "2012",
+						      pages          = "101802",
+						            doi            = "10.1103/PhysRevLett.109.101802",
+							          eprint         = "1205.5442",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ex",
+									            reportNumber   = "BABAR-PUB-12-012, SLAC-PUB-15028",
+										          SLACcitation   = "%%CITATION = ARXIV:1205.5442;%%"
+											  }
+
+@article{Lees:2013uzd,
+      author         = "Lees, J. P. and others",
+            title          = "{Measurement of an Excess of $\bar{B} \to D^{(*)}\tau^-
+                        \bar{\nu}_\tau$ Decays and Implications for Charged Higgs
+                        Bosons}",
+			      collaboration  = "BaBar",
+			            journal        = "Phys. Rev.",
+				          volume         = "D88",
+					        year           = "2013",
+						      number         = "7",
+						            pages          = "072012",
+							          doi            = "10.1103/PhysRevD.88.072012",
+								        eprint         = "1303.0571",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ex",
+										          reportNumber   = "BABAR-PUB-13-001, SLAC-PUB-15381",
+											        SLACcitation   = "%%CITATION = ARXIV:1303.0571;%%"
+												}
+
+@article{Huschle:2015rga,
+      author         = "Huschle, M. and others",
+            title          = "{Measurement of the branching ratio of $\bar{B} \to
+                        D^{(\ast)} \tau^- \bar{\nu}_\tau$ relative to $\bar{B} \to
+                        D^{(\ast)} \ell^- \bar{\nu}_\ell$ decays with hadronic
+                        tagging at Belle}",
+			      collaboration  = "Belle",
+			            journal        = "Phys. Rev.",
+				          volume         = "D92",
+					        year           = "2015",
+						      number         = "7",
+						            pages          = "072014",
+							          doi            = "10.1103/PhysRevD.92.072014",
+								        eprint         = "1507.03233",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ex",
+										          reportNumber   = "KEK-REPORT-2015-18",
+											        SLACcitation   = "%%CITATION = ARXIV:1507.03233;%%"
+												}
+
+@article{Sato:2016svk,
+      author         = "Sato, Y. and others",
+      title          = "{Measurement of the branching ratio of $\bar{B}^0
+                        \rightarrow D^{*+} \tau^- \bar{\nu}_{\tau}$ relative to
+                        $\bar{B}^0 \rightarrow D^{*+} \ell^- \bar{\nu}_{\ell}$
+                        decays with a semileptonic tagging method}",
+      collaboration  = "Belle",
+      journal        = "Phys. Rev.",
+      volume         = "D94",
+      year           = "2016",
+      number         = "7",
+      pages          = "072007",
+      doi            = "10.1103/PhysRevD.94.072007",
+      eprint         = "1607.07923",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "KEK-PREPRINT-2016-8, BELLE-PREPRINT-2016-8",
+      SLACcitation   = "%%CITATION = ARXIV:1607.07923;%%"
+}
+
+@article{Hirose:2016wfn,
+      author         = "Hirose, S. and others",
+      title          = "{Measurement of the $\tau$ lepton polarization and
+                        $R(D^*)$ in the decay $\bar{B} \to D^* \tau^-
+                        \bar{\nu}_\tau$}",
+      collaboration  = "Belle",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "118",
+      year           = "2017",
+      number         = "21",
+      pages          = "211801",
+      doi            = "10.1103/PhysRevLett.118.211801",
+      eprint         = "1612.00529",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "KEK-PREPRINT-2016-53, BELLE-PREPRINT-2016-14",
+      SLACcitation   = "%%CITATION = ARXIV:1612.00529;%%"
+}
+
+@article{Hirose:2017dxl,
+      author         = "Hirose, S. and others",
+            title          = "{Measurement of the $\tau$ lepton polarization and
+                        $R(D^*)$ in the decay $\bar{B} \rightarrow D^* \tau^-
+                        \bar{\nu}_\tau$ with one-prong hadronic $\tau$ decays at
+                        Belle}",
+			      collaboration  = "Belle",
+			            journal        = "Phys. Rev.",
+				          volume         = "D97",
+					        year           = "2018",
+						      number         = "1",
+						            pages          = "012004",
+							          doi            = "10.1103/PhysRevD.97.012004",
+								        eprint         = "1709.00129",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ex",
+										          reportNumber   = "KEK-PREPRINT-2017-26, BELLE-PREPRINT-2017-18",
+											        SLACcitation   = "%%CITATION = ARXIV:1709.00129;%%"
+												}
+												
+
+
+@article{Aaij:2015yra,
+      author         = "Aaij, Roel and others",
+            title          = "{Measurement of the ratio of branching fractions
+                        $\mathcal{B}(\bar{B}^0 \to
+                        D^{*+}\tau^{-}\bar{\nu}_{\tau})/\mathcal{B}(\bar{B}^0 \to
+                        D^{*+}\mu^{-}\bar{\nu}_{\mu})$}",
+			      collaboration  = "LHCb",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "115",
+					        year           = "2015",
+						      number         = "11",
+						            pages          = "111803",
+							          doi            = "10.1103/PhysRevLett.115.159901,
+                        10.1103/PhysRevLett.115.111803",
+			      note           = "[Erratum: Phys. Rev. Lett.115,no.15,159901(2015)]",
+			            eprint         = "1506.08614",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-ex",
+						      reportNumber   = "CERN-PH-EP-2015-150, LHCB-PAPER-2015-025",
+						            SLACcitation   = "%%CITATION = ARXIV:1506.08614;%%"
+							    }
+
+@article{Aaij:2017uff,
+      author         = "Aaij, R. and others",
+            title          = "{Measurement of the ratio of the $B^0 \to D^{*-} \tau^+
+                        \nu_{\tau}$ and $B^0 \to D^{*-} \mu^+ \nu_{\mu}$ branching
+                        fractions using three-prong $\tau$-lepton decays}",
+			      collaboration  = "LHCb",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "120",
+					        year           = "2018",
+						      number         = "17",
+						            pages          = "171802",
+							          doi            = "10.1103/PhysRevLett.120.171802",
+								        eprint         = "1708.08856",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ex",
+										          reportNumber   = "LHCB-PAPER-2017-017, CERN-EP-2017-212,
+                        LHCB-PAPER-2017-017-CERN-EP-2017-212",
+			      SLACcitation   = "%%CITATION = ARXIV:1708.08856;%%"
+			      }
+
+@article{Aaij:2017deq,
+      author         = "Aaij, R. and others",
+            title          = "{Test of Lepton Flavor Universality by the measurement of
+                        the $B^0 \to D^{*-} \tau^+ \nu_{\tau}$ branching fraction
+                        using three-prong $\tau$ decays}",
+			      collaboration  = "LHCb",
+			            journal        = "Phys. Rev.",
+				          volume         = "D97",
+					        year           = "2018",
+						      number         = "7",
+						            pages          = "072013",
+							          doi            = "10.1103/PhysRevD.97.072013",
+								        eprint         = "1711.02505",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ex",
+										          reportNumber   = "CERN-EP-2017-256, LHCB-PAPER-2017-027,
+                        CERN-EP-2017-256-LHCB-PAPER-2017-027",
+			      SLACcitation   = "%%CITATION = ARXIV:1711.02505;%%"
+			      }
+
+@article{Fajfer:2012vx,
+      author         = "Fajfer, Svjetlana and Kamenik, Jernej F. and Nisandzic,
+                        Ivan",
+			      title          = "{On the $B \to D^* \tau \bar \nu_{\tau}$ Sensitivity to
+                        New Physics}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D85",
+				          year           = "2012",
+					        pages          = "094025",
+						      doi            = "10.1103/PhysRevD.85.094025",
+						            eprint         = "1203.2654",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      SLACcitation   = "%%CITATION = ARXIV:1203.2654;%%"
+									      }
+									      
+			      
+
 @article{Abe:2001yf,
       author         = "Abe, Kazuo and others",
             title          = "{Measurement of B(anti-B0 ---> D+ l- anti-nu) and
@@ -154,18 +839,18 @@ author = "D Buskulic et. al"
 
 @article{Grinstein:2017nlq,
       author         = "Grinstein, Benjamin and Kobach, Andrew",
-            title          = "{Model-Independent Extraction of $|V_{cb}|$ from
-                        $\bar{B}\rightarrow D^* \ell \overline{\nu}$}",
-			      journal        = "Phys. Lett.",
-			            volume         = "B771",
-				          year           = "2017",
-					        pages          = "359-364",
-						      doi            = "10.1016/j.physletb.2017.05.078",
-						            eprint         = "1703.08170",
-							          archivePrefix  = "arXiv",
-								        primaryClass   = "hep-ph",
-									      SLACcitation   = "%%CITATION = ARXIV:1703.08170;%%"
-									      }
+      title          = "{Model-Independent Extraction of $|V_{cb}|$ from
+                $\bar{B}\rightarrow D^* \ell \overline{\nu}$}",
+    journal        = "Phys. Lett.",
+     volume         = "B771",
+     year           = "2017",
+     pages          = "359-364",
+     doi            = "10.1016/j.physletb.2017.05.078",
+     eprint         = "1703.08170",
+     archivePrefix  = "arXiv",
+     primaryClass   = "hep-ph",
+     SLACcitation   = "%%CITATION = ARXIV:1703.08170;%%"
+    }
 									      
 
 @article{Falk:1992wt,
@@ -184,6 +869,23 @@ author = "D Buskulic et. al"
       SLACcitation   = "%%CITATION = HEP-PH/9209268;%%"
 										    }
 										    
+
+@article{McNeile:2012qf,
+      author         = "McNeile, C. and Davies, C. T. H. and Follana, E. and
+                        Hornbostel, K. and Lepage, G. P.",
+			      title          = "{Heavy meson masses and decay constants from relativistic
+                        heavy quarks in full lattice QCD}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D86",
+				          year           = "2012",
+					        pages          = "074503",
+						      doi            = "10.1103/PhysRevD.86.074503",
+						            eprint         = "1207.0994",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1207.0994;%%"
+									      }
+									      
 
 @article{PhysRevD.87.034503,
   title = {Direct determination of the strange and light quark condensates from full lattice QCD},
@@ -1392,6 +2094,20 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 			}
 			
 
+@article{Davies:2018fwg,
+      author         = "Davies, Christine T. H. and Harrison, Judd and Hughes,
+                        Ciaran and Horgan, Ronald R. and von Hippel, Georg M. and
+                        Wingate, Matthew",
+			      title          = "{Improving the Kinetic Couplings in Lattice
+                        Non-Relativistic QCD}",
+			      year           = "2018",
+			            eprint         = "1812.11639",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-lat",
+						      reportNumber   = "FERMILAB-PUB-18-698-T",
+						            SLACcitation   = "%%CITATION = ARXIV:1812.11639;%%"
+							    }
+
 @article{Gray:2005ur,
       author         = "Gray, A. and Allison, I. and Davies, C. T. H. and Dalgic,
                         Emel and Lepage, G. P. and Shigemitsu, J. and Wingate, M.",
@@ -1574,6 +2290,25 @@ SLACcitation   = "%%CITATION = ARXIV:1212.4768;%%"
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:1310.1760;%%"
 }
+
+@article{Lytle:2016ixw,
+      author         = "Lytle, Andrew and Colquhoun, Brian and Davies, Christine
+                        and Koponen, Jonna and McNeile, Craig",
+			      title          = "{Semileptonic $B_c$ decays from full lattice QCD}",
+			            booktitle      = "{Proceedings, 16th International Conference on B-Physics
+                        at Frontier Machines (BEAUTY 2016): Marseille, France, May
+                        2-6, 2016}",
+			      journal        = "PoS",
+			            volume         = "BEAUTY2016",
+				          year           = "2016",
+					        pages          = "069",
+						      doi            = "10.22323/1.273.0069",
+						            eprint         = "1605.05645",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1605.05645;%%"
+									      }
+									      
 
 @article{Colquhoun:2015oha,
       author         = "Colquhoun, B. and Davies, C. T. H. and Dowdall, R. J. and
@@ -1916,3 +2651,62 @@ author = "D Buskulic et. al"
 		        doi = {10.1103/PhysRevD.98.030001},
 			  url = {https://link.aps.org/doi/10.1103/PhysRevD.98.030001}
 			  }
+
+@article{WEISZ1984397,
+title = "Continuum limit improved lattice action for pure Yang-Mills theory (II)",
+journal = "Nuclear Physics B",
+volume = "236",
+number = "2",
+pages = "397 - 422",
+year = "1984",
+issn = "0550-3213",
+doi = "https://doi.org/10.1016/0550-3213(84)90543-1",
+url = "http://www.sciencedirect.com/science/article/pii/0550321384905431",
+author = "P. Weisz and R. Wohlert",
+abstract = "Wilson loops are calculated to one-loop order using lattice actions including 6-link loops. The static potential is extracted and its small-a expansion performed using coefficients determined at tree level. The Λ-parameter for Symanzik's improved action is thereby obtained and constraints placed on the coefficients appearing in the action at order g2."
+}
+
+@article{WEISZ19831,
+title = "Continuum limit improved lattice action for pure Yang-Mills theory (I)",
+journal = "Nuclear Physics B",
+volume = "212",
+number = "1",
+pages = "1 - 17",
+year = "1983",
+issn = "0550-3213",
+doi = "https://doi.org/10.1016/0550-3213(83)90595-3",
+url = "http://www.sciencedirect.com/science/article/pii/0550321383905953",
+author = "P. Weisz",
+abstract = "Symanzik's programme for constructing a lattice action with improved continuum limit behaviour is considered for the case of pure Yang-Mills theory. The structure of the action is proposed and discussed in detail to lowest order in perturbation theory."
+}
+
+@article{Hart:2008sq,
+      author         = "Hart, A. and von Hippel, G. M. and Horgan, R. R.",
+            title          = "{Radiative corrections to the lattice gluon action for
+                        HISQ improved staggered quarks and the effect of such
+                        corrections on the static potential}",
+			      collaboration  = "HPQCD",
+			            journal        = "Phys. Rev.",
+				          volume         = "D79",
+					        year           = "2009",
+						      pages          = "074008",
+						            doi            = "10.1103/PhysRevD.79.074008",
+							          eprint         = "0812.0503",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            reportNumber   = "EDINBURGH-2008-46, DESY-08-181, DAMTP-2008-110",
+										          SLACcitation   = "%%CITATION = ARXIV:0812.0503;%%"
+											  }
+
+@article{luscher1985,
+author = "Lüscher, M. and Weisz, P.",
+fjournal = "Communications in Mathematical Physics",
+journal = "Comm. Math. Phys.",
+number = "1-2",
+pages = "59--77",
+publisher = "Springer",
+title = "On-shell improved lattice gauge theories",
+url = "https://projecteuclid.org:443/euclid.cmp/1103941978",
+volume = "97",
+year = "1985"
+}
